src/test/deca/syntax/valid/synt/print.deca
{
    print("bonjour");
    println("bonjour");
    printx("bonjour");
    printlnx("bonjour");
}
