src/test/deca/syntax/invalid/synt/instB4Decl.deca
// @expected_output deca:4:4:
{
print("bonjour");
int x;
}
